# ECS178-Geometric-Design

./: AssignmentGUI.hh  BezierEditor.hh  CMakeLists.txt  EditorBase.hh  PolyapproxEditor.hh  PolyinterpEditor.hh  README.md  SplineEditor.hh  SplineInterpEditor.hh  SurfaceEditor.hh  TriSurfEditor.hh  Viewer.hh  bezier.cc  main.cc  polyinterp.cc  readme.txt  spline.cc  spline.hh  spline_interpolation.cc  tensor_product_surface.cc  triangle_surf.cc
cmake/: libigl.cmake
